# CoCapture

./: .gitignore  CMakeLists.txt  FindSpinnaker.cmake  LICENSE  README.md
app/: main.cpp  recorder.cpp  visualizer.cpp
cam_interfaces/: cam_interface.h
cam_interfaces/basler/: basler_interface.cpp  basler_interface.h
cam_interfaces/flir/: flir_interface.cpp  flir_interface.h
cam_interfaces/prophesee/: prophesee_interface.cpp  prophesee_interface.h
cam_interfaces/realsense/: realsense_interface.cpp  realsense_interface.h
cams/basler/: basler_camera.cpp  basler_camera.h  image_event_handler.h
cams/flir/: flir_camera.cpp  flir_camera.h  image_event_handler.h
cams/prophesee/: bias_ranges.txt  event_signal_processor.h  prophesee_camera.cpp  prophesee_camera.h  trigger_event_saver.h
cams/realsense/: l5.cpp  l5.h  realsense_camera.cpp  realsense_camera.h
cmake/: FindPangolin.cmake  FindPylon.cmake
config/: homography.txt
core/: camera.h  camera_interface.h  launcher_interface.h
core/basler/: basler_camera.cpp  basler_camera.h  basler_launcher.cpp  basler_launcher.h
core/gui/: gui.cpp  gui.h
core/prophesee/: prophesee_camera.cpp  prophesee_camera.h  prophesee_launcher.cpp  prophesee_launcher.h
docs/: publications.md
docs/trigger_box/: Triggerbox.docx
gui/: camera_gui.h  imgui_helper.cpp  imgui_helper.h
gui/basler/: basler_gui.cpp  basler_gui.h
gui/flir/: flir_gui.cpp  flir_gui.h
gui/prophesee/: prophesee_gui.cpp  prophesee_gui.h
gui/realsense/: realsense_gui.cpp  realsense_gui.h
lib/: CCGui.cpp  CCGui.h  basler_event_handler.cpp  basler_event_handler.h  basler_recorder.h  constants.cpp  constants.h  event_queue.cpp  event_queue.h  event_visualizer.cpp  event_visualizer.h  gui.cpp  gui.h  parameters.h  prophesee_interface.cpp  prophesee_interface.h  trigger_event_saver.cpp  trigger_event_saver.h  utils.cpp  utils.h
lib/Application/: CameraController.cpp  CameraController.h  Constants.h  Gui.cpp  Gui.h
lib/Application/Camera/: Base.cpp  Base.h  BaslerWrapper.h  PropheseeWrapper.h  RealSenseWrapper.h
lib/Application/Components/: Component.h  Recorder.cpp  Recorder.h  Sidepanel.cpp  Sidepanel.h  Viewpanel.cpp  Viewpanel.h
lib/Gui/: Base.cpp  Base.h  BaslerWrapper.h  CameraController.cpp  CameraController.h  Constants.h  Gui.cpp  Gui.h  PropheseeWrapper.h  gui.h
lib/camera/: base.cpp  base.h  basler_camera.cpp  basler_camera.h  prophesee_cam.cpp  prophesee_cam.h  realsense_cam.cpp  realsense_cam.h
src/: cocapture.cpp  main.cpp  recorder.cpp
tools/: event_readers.py  play_stereo.py
tools/recorder/: recorder.cpp  recorder.h
wrappers/: camera_wrapper.h
wrappers/basler/: basler_wrapper.cpp  basler_wrapper.h
wrappers/flir/: flir_wrapper.cpp  flir_wrapper.h
wrappers/prophesee/: prophesee_wrapper.cpp  prophesee_wrapper.h
wrappers/realsense/: realsense_wrapper.cpp  realsense_wrapper.h
